# Website-2.0

./: .env.local  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json
backend/: .flake8  manage.py  pyproject.toml  setup.cfg
backend/Aries/: asgi.py  urls.py  views.py  wsgi.py
backend/Aries/settings/: __init__.py  common.py  local.py
backend/user/: admin.py  models.py  serilizers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
backend/utils/: errors.py  mixins.py  path.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/components/: Card.tsx  Icon.tsx  Menu.tsx  Project.tsx
frontend/hooks/: team.tsx
frontend/pages/: aboutUs.tsx  contactUs.tsx  menu.tsx  project.tsx
frontend/pages/team/: index.tsx
frontend/styles/: card.module.css  globals.css  team.module.css
frontend/utils/: network.js
