[tool.poetry]
name = "Aries-backend"
version = "0.1.0"
description = ""
authors = ["Pranav"]
readme = "README.md"
packages = [{include = "Aries-backend"}]

[tool.poetry.dependencies]
python = "^3.9"

#Core
Django = "^4.2"
django-configurations = "^2.4.1"
gunicorn = "^20.1.0"
Pillow = "^9.5.0"
celery = "^5.2.7"

# Rest APIs
djangorestframework = "^3.14.0"

# Model Tools
django-silk = "^5.0.3"

# Static and Media Storage
django-cors-headers = "^3.14.0"
boto3 = "^1.26.116"
django-storages = "^1.13.2"

# Environment variables
python-dotenv = "^1.0.0"

# For the persistence stores
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"

#Error tracking
sentry-sdk = "^1.19.1"

#Logging
django-log-request-id = "^2.1.0"
djangorestframework-camel-case = "^1.4.2"
django-redis = "^5.2.0"
django-oauth-toolkit = "^2.1.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "0.5.3"
geocoder = "^1.38.1"


[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
